# podcast-index-mcp

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/: main.py
src/podcast_index/: auth.py  client.py  main.py
tests/: test_auth.py  test_client.py  test_server.py
