[project]
name = "podcast-index-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "httpx==0.28.1",
    "mcp[cli]==1.20.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pyrefly==0.39.4",
    "pytest==8.4.2",
    "pytest-asyncio==0.25.2",
    "pytest-xdist==3.6.1",
    "ruff==0.14.3",
]
